import("//testing/test.gni")

config("internal_config") {
  defines = [ "ENABLE_VULKAN" ]
  defines += [ "VULKAN_IMPLEMENTATION" ]

  include_dirs = [ "/usr/include" ]
  if (current_cpu == "x64") {
      lib_dirs = [
        "/usr/lib/x86_64-linux-gnu",
      ]
  }

  deps = [
    "//base",
  ]

  libs = [ "vulkan" ]

deps += [ 
    "//ui/gfx/x",
    "//skia",
  ]
}

test("vulkan_test") {
  sources = [
    "vulkan_buffer.cc",
    "vulkan_device_queue.cc",
    "vulkan_command_pool.cc",
    "vulkan_image_view.cc",
    "vulkan_implementation.cc",
    "vulkan_shader_module.cc",
    "vulkan_surface.cc",
    "vulkan_swap_chain.cc",
    "vulkan_render_pass.cc",
    "../tests/basic_vulkan_test.cc",
    "../tests/native_window_x11.cc",
    "../tests/vulkan_test.cc",
    "../tests/vulkan_tests_main.cc"
  ]
  deps = [ 
    "//third_party/shaderc:libshaderc",
    "//ui/base",
    "//base/test:test_support",
    "//testing/gmock",
    "//testing/gtest",
    "//ui/gfx/x",
  ]

  configs += [ "//build/config/linux:x11", ":internal_config" ]
}
